--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width">
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.css">
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/0.4.9/toaster.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.1/css/material.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.1/css/ripples.css" />
 
@@ -15,6 +16,7 @@
   </head>
   <body ng-app="TaskNinjaApp">
 
+  <toaster-container toaster-options="{'time-out': 3000, 'close-button':true}"></toaster-container>
     <div ng-include="'views/nav.html'"></div>
 
     <div class="jumbotron">
@@ -28,7 +30,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-animate.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-resource.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-route.js"></script>
-    
+    <!--TOASTER-->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/0.4.9/toaster.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.1.0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/0.9.1/angularfire.min.js"></script>
 
@@ -45,6 +48,8 @@
     <script src="scripts/app.js"></script>
 
      <script src="scripts/controllers/task.js"></script>
+     <script src="scripts/controllers/auth.js"></script>
+     <script src="scripts/controllers/nav.js"></script>
 
     <script src="scripts/services/auth.js"></script>
    
